fixes+new job API for deleting jobs
